Fix Select value line height causing flickering

--- a/src/core/select/select.module.scss
+++ b/src/core/select/select.module.scss
@@ -86,6 +86,7 @@
   cursor: default;
   overflow: hidden;
   text-overflow: ellipsis;
+  line-height: normal;
 }
 
 .input:placeholder-shown {
